# spot-playground

./: .gitignore  CMakeLists.txt  README.md
src/: constructFormula.cpp  transform.cpp
